--- a/task5/style.css
+++ b/task5/style.css
@@ -40,16 +40,19 @@ ul {
     margin-bottom: 4%;
 }
 
+.year{
+   text-decoration: underline;
+}
 .house {
     border-width: 2px;
     border-style: solid;
     border-color: #000203;
-    margin-bottom: 3px ;
+    margin-top: 10px ;
 }
 
 a, a:visited {
     outline: none;
-    color: #389dc1;
+    color: black;
 }
 
 section, footer, header, aside, nav {
